# tonic

./: README.md  meson.build
.github/workflows/: main.yml
data/: meson.build
engine/: game.h  internal.h  linux-main.cpp  linux_main.cpp  meson.build  opengl.h  platform.h  win32_main.cpp  windows-main.cpp  windows-opengl.cpp  windows-opengl.h  windows-private.h  windows-shared.cpp  windows_main.cpp
engine/data/: meson.build
engine/platform/: meson.build
engine/platform/linux/: linux-opengl.cpp  linux-opengl.h  linux-platform.cpp  linux-platform.h  meson.build
engine/platform/windows/: meson.build  windows-opengl.cpp  windows-opengl.h  windows-platform.cpp  windows-platform.h  windows-private.h  windows-shared.cpp
game/: game.cpp  meson.build
game/renderer/: shader.cpp  shader.h
tonic-prefix/share/tonic/: hello.txt
